--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
+    "mongoose": "^6.4.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
