--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
