--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
+    "mongoose": "^6.4.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
